# crust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB-COPILOT-PREREPO-PROMPT-V2 (1).md  GITHUB-COPILOT-PREREPO-PROMPT-V3.md  MANUAL-TESTING-HANDOFF.md  Manual_testing.md  PRE-REPO-STATUS.md  QUICK-REFERENCE.md  README.md  START-HERE.md  STATUS-COMMAND-FIX.md  TASK-002-HANDOFF.md  TASK-003-HANDOFF.md  TASK-004-HANDOFF.md  TASK-005-PART1-HANDOFF.md  TASK-005-PART2-HANDOFF.md  TASK-006-HANDOFF.md  TASK-007-HANDOFF.md  TASK-008-HANDOFF.md  TASK-009-HANDOFF.md  TASK-010-HANDOFF.md  TASK-011-HANDOFF.md  TASK-012-HANDOFF.md  TASK-013-HANDOFF.md  TASK-013-VERIFICATION.md  TASK-014-HANDOFF.md  TASK-015-HANDOFF.md  TASK-016-HANDOFF.md  WORKFLOW.md  docker-compose.yml  requirements-v2.md  setup.bat  setup.sh
.github/: copilot-instructions.md
.sqlx/: query-03b1150fc2e28a9ca622e9e8e303744bb62b2e4655d9e4b9fb7a25b3b4269c0d.json  query-042b076209725cc388c3bda460327fd679dc4337d0ad3169f20946f18dbf0106.json  query-0e110cd8a3d0c99bd5ec912f316c401373ac45f09eed8950bae588895938f812.json  query-128b228d500d13ac3af588e0d36d27a94480413779b3df57899578f273caf175.json  query-132033891c0b620d6b85b7663ecefa7ca35188af67b96d8adae594784c5edfec.json  query-1c771e56840504605a66fb54b547d54c7b7ff49c41feaa8ff539b81efde892c1.json  query-200d66451c8ae72dbddaf2f2c055b2bd897071a6152830cbcfcfea73eabe5db8.json  query-23975330e499409056a740ed118e8617477a80a4dfcaa605bbee5ba55d670503.json  query-3448e2c236b79c581bb7171789e2a85b22bddc0550c9c7890cabc989cbe41124.json  query-34f6cd8605935d3873d21c28077674ca6480e1d7ed38cba50f7c171cf40b4109.json  query-3985830c197db03462b9973a82381c1568e031b34fab53749d6aa8ce2c3a761e.json  query-3c4457af4973cb7a8c23a73e5d057a7d8e2f0a891e8e40688df9b832a958c839.json  query-4082e33c4a371e4900636236a2580398bf67453afd64ddbb765a2dcad582b604.json  query-4b435ba0554acfb1dfdb5901a458581eb12ad5ca76e37805621593667dda95ab.json  query-53da434bd3431ed3a8dfac0cccfa587842104bc6e1b37f3337c73e24e7fe1b47.json  query-56dccb45698fe98df49f55686baac614825d313ce6abe86afc81af0b165bbadb.json  query-590fc54812207d26b6fb47ba8fe90a5c7f53221f6f6573a6169c8f4ff5aed7a9.json  query-6732c17acd00684cd9e0b54415f928a059e1b9c82e73e01c34aed3653a4bbc29.json  query-70d22deae61bd495916f0a4cb9e0173e4db625168f115491d888114d3af609da.json  query-751d71eadd0be726b0be598b3b5a47097400b9e6038257b56577dcf212b64fed.json  query-7b5b5535ede2e5d93054d33e1042d4efb1f8946613bbd7321b77d51daa392d76.json  query-8034c1c68be72e61b4c468e9ef9c2c107bbd212b4585aed7deb8af41575dbf86.json  query-804f60e24da644e44c9f44429e8d002daee46bd1459526d36cc203cb94853a84.json  (+16 more)
contracts/: README.md  api-contracts.md  (+6 more)
crust-cli/: Cargo.toml  README.md
crust-cli/src/: client.rs  config.rs  index.rs  main.rs  pack.rs  refs.rs  remote.rs  working_tree.rs
crust-cli/src/commands/: add.rs  branch.rs  cat_object.rs  checkout.rs  clone.rs  commit.rs  diff.rs  fetch.rs  hash_object.rs  init.rs  log.rs  login.rs  logout.rs  ls_tree.rs  merge.rs  mod.rs  pull.rs  push.rs  remote.rs  restore.rs  rev_parse.rs  show.rs  status.rs  verify_pack.rs  whoami.rs
crust-server/: Cargo.toml
crust-server/migrations/: 001_initial_schema.sql  002_updated_at_triggers.sql
crust-server/src/: database.rs  lib.rs  main.rs  permissions.rs  routes.rs
crust-server/src/auth/: handlers.rs  middleware.rs  mod.rs  token.rs
crust-server/src/routes/: objects.rs  orgs.rs  prs.rs  teams.rs
crust-server/src/storage/: mod.rs
gitcore/: Cargo.toml
gitcore/src/: blob.rs  commit.rs  error.rs  lib.rs  merge.rs  object.rs  tag.rs  tree.rs
(+15 files in other folders)
