[workspace]
members = ["gitcore", "crust-server", "crust-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CRUST Team"]
license = "MIT"
repository = "https://github.com/crust/crust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP framework
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }

# Cryptography & Auth
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Compression
zstd = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
dirs = "5.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
hex-literal = "0.4"

# Testing
tempfile = "3.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
