[package]
name = "crust-cli"
version.workspace = true
edition.workspace = true
description = "CRUST command-line client - VCS client replacing git"

[[bin]]
name = "crust"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rpassword.workspace = true
dirs.workspace = true
indicatif.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true

gitcore = { path = "../gitcore" }

[dev-dependencies]
tempfile = "3.8"
