[package]
name = "crust-server"
version.workspace = true
edition.workspace = true
description = "CRUST HTTP server - REST API with Axum/Tokio and PostgreSQL"

[[bin]]
name = "crust-server"
path = "src/main.rs"

[lib]
name = "crust_server"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sha2.workspace = true
hex.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
zstd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

gitcore = { path = "../gitcore" }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
